--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,36 @@
 body {
-  background: darkblue;
+  background: #000033;
+  background-image: url("https://0.s3.envato.com/files/22309088/Soccer%20Field%20Rotating.jpg");
   color: lightgrey;
 }
+
+header {
+  background: grey;
+  border: 1px solid white;
+  padding: 10px;
+  margin: 10px;
+}
+
+p {
+  font: 15px arial, sans-serif;
+}
+
+li.name {
+  font: italic bold 12px/30px Georgia, serif;
+}
+
 a {
   color: lightblue;
 }
+
+a:visited {
+  color: black;
+}
+
+a:hover {
+    color: white;
+}
+
 h1 {
   color: white;
 }
@@ -13,4 +39,15 @@ h4 {
 }
 img {
 
+}
+
+#similar-site {
+  background-color: grey;
+}
+
+footer {
+  margin: auto;
+  width: 60%;
+  border: 3px solid grey;
+  padding: 10px;
 }
