--- a/css/templatemo_style.css
+++ b/css/templatemo_style.css
@@ -1,6 +1,6 @@
-/* 
+/*
 
-Flex Template 
+Flex Template
 
 http://www.templatemo.com/tm-406-flex
 
@@ -159,13 +159,13 @@ body {
   font-size: .83em;
   line-height: 1.75;
   color: #666666;
-  background-color: white;
+  background-color: #001d33;
   text-rendering: optimizeLegibility;
   overflow-x: hidden;
 }
 
 a {
-  color: #ec523f;
+  color: #025497;
   text-decoration: none;
   -webkit-transition: all 200ms ease-in-out;
   -moz-transition: all 200ms ease-in-out;
@@ -178,7 +178,7 @@ a:hover {
 
 h1, h2, h3, h4, h5, h6 {
   font-family: "Open Sans", Arial, sans-serif;
-  color: #444444;
+  color: #ffffff;
 }
 
 *, *:before, *:after {
@@ -282,7 +282,7 @@ hr {
 }
 
 .logo-wrapper {
-  background: url(../images/logo.png) no-repeat;
+  background: url(../images/apellas-llc-logo.png) no-repeat;
   height: 100px;
   background-position: 15px;
 }
@@ -292,7 +292,7 @@ hr {
   padding-left: 130px;
   line-height: 100px;
   text-transform: uppercase;
-  color: #ec523f;
+  color: #025497;
   font-size: 32px;
   font-weight: 700;
 }
@@ -312,8 +312,8 @@ hr {
   padding-top: 37px;
 }
 .main-menu ul li.active a {
-  border-top: 3px solid #ec523f;
-  color: #ec523f;
+  border-top: 3px solid #025497;
+  color: #025497;
 }
 
 .toggle-menu {
@@ -325,7 +325,7 @@ hr {
   text-align: center;
   line-height: 36px;
   font-size: 14px;
-  background: #EC523F;
+  background: #025497;
   display: inline-block;
   color: white;
   cursor:pointer;
@@ -345,12 +345,13 @@ hr {
   font-size: 14px;
 }
 .menu-responsive ul li.active a {
-  color: #ec523f;
+  color: #025497;
 }*/
 
 .flexslider {
   position: relative;
   top: -96px;
+  height: 75%;
 }
 .flexslider .overlay {
   position: absolute;
@@ -388,7 +389,7 @@ hr {
 }
 .flexslider .slider-caption a.slider-btn {
   color: white;
-  background-color: #ec523f;
+  background-color: #025497;
   padding: 12px 20px;
   border-radius: 4px;
   text-transform: uppercase;
@@ -414,8 +415,8 @@ hr {
   }
 }
 @media screen and (max-width: 991px) {
-  .logo-wrapper { 
-    background-size: contain;     
+  .logo-wrapper {
+    background-size: contain;
   }
   .logo-wrapper{
     height: 50px;
@@ -433,7 +434,7 @@ hr {
   }
   .menu-first.show {
     /*opacity: 1;*/
-    /*height: auto;  */  
+    /*height: auto;  */
     margin-top: 10px;
     display: block;
     /*transition: opacity 1s, height 0;*/
@@ -441,17 +442,17 @@ hr {
   .menu-first {
     float: right;
     overflow: auto;
-    width: 100%;  
-    display: none;  
-    /*opacity: 1;  */  
-    /*height: 0;  */  
+    width: 100%;
+    display: none;
+    /*opacity: 1;  */
+    /*height: 0;  */
     /*background: rgba(50, 50, 50, 0.88);*/
     /*transition: opacity 1s, height 0 1s; */
     /*transition: all 0.3s ease;    */
   }
   .main-menu ul li a {
     line-height: 40px;
-    padding-top: 10px;   
+    padding-top: 10px;
   }
   .main-menu ul li.active a {
     border-top: none;
@@ -484,8 +485,8 @@ hr {
 }
 
 .content-section {
-  margin-top: 80px;
-  padding-top: 60px;
+  margin-top: 50px;
+  padding-top: 40px;
 }
 
 .heading-section {
@@ -495,11 +496,11 @@ hr {
   font-size: 28px;
   font-weight: 600;
   text-transform: uppercase;
-  border-bottom: 1px solid #444444;
+  border-bottom: 1px solid #ffffff;
   display: inline-block;
 }
 .heading-section p {
-  color: #444444;
+  color: #ffffff;
   font-size: 16px;
   font-weight: 300;
   text-transform: uppercase;
@@ -517,7 +518,7 @@ hr {
   position: relative;
 }
 
-.content-section#services {
+.content-section#skills {
   margin-top: 0px;
 }
 
@@ -575,19 +576,19 @@ hr {
 }
 
 #service-1 {
-  background-color: #1abc9c;
+  background-color: #aaaaaa;
 }
 
 #service-2 {
-  background-color: #e67e22;
+  background-color: #aaaaaa;
 }
 
 #service-3 {
-  background-color: #3498db;
+  background-color: #aaaaaa;
 }
 
 #service-4 {
-  background-color: #2ecc71;
+  background-color: #aaaaaa;
 }
 
 .portfolio-item {
@@ -601,7 +602,7 @@ hr {
   width: 100%;
 }
 .portfolio-item .portfolio-thumb .portfolio-overlay {
-  background-color: #ec523f;
+  background-color: #025497;
   position: absolute;
   width: 100%;
   height: 100%;
@@ -667,7 +668,7 @@ hr {
   text-align: center;
   top: 0;
   left: 0;
-  background-color: #ec523f;
+  background-color: #025497;
   color: white;
   opacity: 0;
   visibility: hidden;
@@ -702,7 +703,7 @@ hr {
   height: 36px;
   background-color: white;
   line-height: 40px;
-  color: #ec523f;
+  color: #025497;
   border-radius: 18px;
   -webkit-border-radius: 18px;
   -moz-border-radius: 18px;
@@ -740,7 +741,7 @@ hr {
   padding-left: 15px;
   text-transform: uppercase;
   font-weight: 700;
-  background-color: #ec523f;
+  background-color: #025497;
   box-shadow: none;
 }
 
@@ -770,13 +771,13 @@ hr {
 .contact-form .mainBtn {
   margin-top: 15px;
   color: white;
-  background-color: #ec523f;
+  background-color: #025497;
   text-transform: uppercase;
   border: 0;
 }
 
 #go-top {
-  background-color: #ec523f;
+  background-color: #025497;
   color: white;
   padding: 15px 40px;
   text-transform: uppercase;
