--- a/css/templatemo_style.css
+++ b/css/templatemo_style.css
@@ -309,11 +309,15 @@ hr {
   margin-right: 35px;
 }
 .main-menu ul li a {
+  font-weight: 900;
   text-transform: uppercase;
   font-size: 14px;
   color: #444444;
   line-height: 100px;
   padding-top: 37px;
+}
+.main-menu ul li a:hover {
+  color: #025497;
 }
 .main-menu ul li.active a {
   border-top: 3px solid #001d33;
@@ -493,8 +497,8 @@ hr {
 }
 
 .content-section {
-  margin-top: 50px;
-  padding-top: 40px;
+  margin-top: 80px;
+  padding-top: 70px;
 }
 
 .heading-section {
@@ -577,7 +581,7 @@ hr {
   color: #001d33;
   display: inline-block;
   padding-bottom: 10px;
-  border-bottom: 1px solid white;
+  border-bottom: 1px solid #025497;
   margin-bottom: 15px;
 }
 .service-item:hover .service-icon {
